--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,11 @@
 {
+	"rules": {
+		"no-process-exit": "off",
+		"indent": [
+			"error",
+			"tab"
+		]
+	},
 	"extends": [
 		"oclif",
 		"oclif-typescript"
