--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,27 @@
 {
 	"rules": {
+		"camelcase": "off",
 		"no-process-exit": "off",
 		"unicorn/no-process-exit": "off",
 		"indent": [
 			"error",
 			"tab"
+		],
+		"node/no-missing-import": [
+			"error",
+			{
+				"allowModules": [],
+				"resolvePaths": [
+					"/src"
+				],
+				"tryExtensions": [
+					".js",
+					".json",
+					".node",
+					".ts",
+					".d.ts"
+				]
+			}
 		]
 	},
 	"extends": [
