--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,24 @@
 {
+	"ts-node": {
+		"transpileOnly": true
+	},
 	"compilerOptions": {
 		"declaration": true,
+		"forceConsistentCasingInFileNames": true,
 		"importHelpers": true,
-		"esModuleInterop": true,
 		"module": "commonjs",
-		"outDir": "dist",
-		"rootDir": "src",
+		"outDir": "./lib",
+		"rootDirs": [
+			"./src"
+		],
 		"strict": true,
-		"target": "es2019"
+		"lib": [
+			"ES2019"
+		],
+		"target": "es2017",
+		"allowSyntheticDefaultImports": true
 	},
 	"include": [
-		"src/**/*"
+		"./src/**/*"
 	]
 }
