--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"bin": {
 		"lance": "./bin/run"
 	},
-	"homepage": "https://github.com/imagelance/cli",
+	"homepage": "https://github.com/imagelance/imagelance-cli",
 	"license": "Apache-2.0",
 	"main": "dist/index.js",
 	"repository": "imagelance/cli",
@@ -118,7 +118,7 @@
 	"engines": {
 		"node": ">=12.0.0"
 	},
-	"bugs": "https://github.com/imagelance/cli/issues",
+	"bugs": "https://github.com/imagelance/imagelance-cli/issues",
 	"keywords": [
 		"oclif"
 	],
