chore: add commands helping with CLI distribution

--- a/package.json
+++ b/package.json
@@ -114,7 +114,9 @@
 		"posttest": "yarn lint",
 		"prepack": "yarn build && oclif manifest && oclif readme",
 		"test": "mocha --forbid-only \"test/**/*.test.ts\"",
-		"version": "oclif readme && git add README.md"
+		"version": "oclif readme && git add README.md",
+		"upload": "env $(cat .env | xargs) oclif upload",
+		"promote": "env $(cat .env | xargs) oclif promote"
 	},
 	"engines": {
 		"node": ">=12.0.0"
