--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
 	],
 	"dependencies": {
 		"@frigus/is-hidden-file": "^1.0.2",
-		"@oclif/core": "^2.1.7",
-		"@oclif/plugin-autocomplete": "^2.1.1",
-		"@oclif/plugin-help": "^5.2.5",
-		"@oclif/plugin-not-found": "^2.3.20",
-		"@oclif/plugin-update": "^3.1.5",
-		"@oclif/plugin-warn-if-update-available": "^2.0.28",
+		"@oclif/core": "^2.4.0",
+		"@oclif/plugin-autocomplete": "^2.1.3",
+		"@oclif/plugin-help": "^5.2.6",
+		"@oclif/plugin-not-found": "^2.3.21",
+		"@oclif/plugin-update": "^3.1.6",
+		"@oclif/plugin-warn-if-update-available": "^2.0.29",
 		"@sentry/node": "^6.19.7",
 		"adm-zip": "^0.5.10",
 		"axios": "^0.27.2",
@@ -40,7 +40,7 @@
 		"inquirer": "^8.2.5",
 		"inquirer-search-list": "^1.2.6",
 		"listr": "^0.14.3",
-		"open": "^8.4.0",
+		"open": "^8.4.2",
 		"path": "^0.12.7",
 		"pdf2pic": "^2.1.4",
 		"randomstring": "^1.2.3",
@@ -50,7 +50,7 @@
 		"which": "^2.0.2"
 	},
 	"devDependencies": {
-		"@oclif/test": "^2.3.5",
+		"@oclif/test": "^2.3.8",
 		"@types/adm-zip": "^0.5.0",
 		"@types/chai": "^4.3.4",
 		"@types/cli-table": "^0.3.0",
@@ -60,7 +60,7 @@
 		"@types/inquirer": "^8.2.1",
 		"@types/listr": "^0.14.4",
 		"@types/mocha": "^9.0.0",
-		"@types/node": "^16.18.12",
+		"@types/node": "^16.18.14",
 		"@types/node-notifier": "^8.0.2",
 		"@types/randomstring": "^1.1.8",
 		"@types/rimraf": "^3.0.2",
@@ -69,10 +69,10 @@
 		"chai": "^4.3.7",
 		"eslint": "^7.32.0",
 		"eslint-config-oclif": "^4.0.0",
-		"eslint-config-oclif-typescript": "^1.0.2",
+		"eslint-config-oclif-typescript": "^1.0.3",
 		"globby": "^11",
 		"mocha": "^9",
-		"oclif": "^3.6.3",
+		"oclif": "^3.7.0",
 		"shx": "^0.3.3",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.5.0",
@@ -89,6 +89,11 @@
 			"@oclif/plugin-warn-if-update-available",
 			"@oclif/plugin-autocomplete"
 		],
+		"warn-if-update-available": {
+			"timeoutInDays": 1,
+			"message": "<%= config.name %> update available from <%= chalk.greenBright(config.version) %> to <%= chalk.greenBright(latest) %>.",
+			"registry": "https://registry.npmjs.org"
+		},
 		"topicSeparator": " ",
 		"node": {
 			"version": "16.19.0"
