--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,11 @@
 		"no-process-exit": "off",
 		"unicorn/no-process-exit": "off",
 		"no-async-promise-executor": "off",
+		"no-await-in-loop": "off",
+		"arrow-parens": [
+			"error",
+			"always"
+		],
 		"indent": [
 			"error",
 			"tab",
