--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"importHelpers": true,
 		"esModuleInterop": true,
+		"skipLibCheck": true,
 		"module": "commonjs",
 		"outDir": "./dist",
 		"rootDirs": [
@@ -14,12 +15,15 @@
 		],
 		"strict": true,
 		"lib": [
-			"ES2019"
+			"es2021"
 		],
 		"target": "es2017",
 		"allowSyntheticDefaultImports": true
 	},
 	"include": [
 		"./src/**/*"
+	],
+	"exclude": [
+		"node_modules"
 	]
 }
